# phaseco

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  example.py  pyproject.toml  setup.py
.github/workflows/: publish.yml
Example Scripts/: example_primary.py  example_zeta_windowing.py
docs/: _config.yml  index.md  installation.md
docs/_includes/: head-custom.html
examples/: example_main.py  example_zeta_windowing.py
phaseco/: __init__.py  funcs.py  helper_funcs.py  numba_funcs.py  plots.py
phaseco.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
