[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phaseco"
version = "0.1.0"
description = "A Python package for phase autocoherence analysis"
authors = [
  { name="Seth Peacock", email="seththepeacock@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib",
  "tqdm"
]

[tool.setuptools.packages.find]
where = ["."]