[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phaseco"
version = "0.1.0"
description = "Tools for phase autocoherence analysis with dynamic windowing methods"
authors = [
  { name="Seth Peacock", email="seththepeacock@gmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "tqdm"
]

[project.urls]
Homepage = "https://seththepeacock.github.io/phaseco"
Repository = "https://github.com/seththepeacock/phaseco"
Documentation = "https://seththepeacock.github.io/phaseco"

[tool.setuptools.packages.find]
where = ["."]